src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Bottom_Indicator1_Category__c</fullName>
        <label>Bottom Indicator1 Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bottom_Indicator1__c</fullName>
        <label>Bottom Indicator1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bottom_Indicator2_Category__c</fullName>
        <label>Bottom Indicator2 Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bottom_Indicator2__c</fullName>
        <label>Bottom Indicator2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bottom_Indicator3_Category__c</fullName>
        <label>Bottom Indicator3 Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bottom_Indicator3__c</fullName>
        <label>Bottom Indicator3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Date__c</fullName>
        <label>Converted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Type__c</fullName>
        <label>Department Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Comp_Fit_Rating__c</fullName>
        <formula>IF($Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_1__c &lt;=  ES_Comp_Fit_Score__c &amp;&amp;  ES_Comp_Fit_Score__c &lt;= 100,
	&quot;A&quot;,
	IF($Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_2__c &lt;=  ES_Comp_Fit_Score__c &amp;&amp;  ES_Comp_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_1__c,
		&quot;B&quot;,
		IF($Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_3__c &lt;=  ES_Comp_Fit_Score__c &amp;&amp;  ES_Comp_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_2__c,
			&quot;C&quot;,
			IF(0 &lt;= ES_Comp_Fit_Score__c &amp;&amp; ES_Comp_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_3__c,
				&quot;D&quot;,
				&quot;&quot;
			)
		)
	)
)</formula>
        <label>Company Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Comp_Fit_Score__c</fullName>
        <label>Company Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Person_Engagement_Rating__c</fullName>
        <formula>IF($Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_1__c &lt;=  ES_Person_Engagement_Score__c &amp;&amp;  ES_Person_Engagement_Score__c &lt;= 100,
	&quot;A&quot;,
	IF($Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_2__c &lt;=  ES_Person_Engagement_Score__c &amp;&amp;  ES_Person_Engagement_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_1__c,
		&quot;B&quot;,
		IF($Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_3__c &lt;=  ES_Person_Engagement_Score__c &amp;&amp;  ES_Person_Engagement_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_2__c,
			&quot;C&quot;,
			IF(0 &lt;= ES_Person_Engagement_Score__c &amp;&amp; ES_Person_Engagement_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_3__c,
				&quot;D&quot;,
				&quot;&quot;
			)
		)
	)
)</formula>
        <label>Lead Engagement Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Person_Engagement_Score__c</fullName>
        <label>Lead Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Person_Fit_Rating__c</fullName>
        <formula>IF($Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_1__c &lt;=  ES_Person_Fit_Score__c &amp;&amp;  ES_Person_Fit_Score__c &lt;= 100,
	&quot;A&quot;,
	IF($Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_2__c &lt;=  ES_Person_Fit_Score__c &amp;&amp;  ES_Person_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_1__c,
		&quot;B&quot;,
		IF($Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_3__c &lt;=  ES_Person_Fit_Score__c &amp;&amp;  ES_Person_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_2__c,
			&quot;C&quot;,
			IF(0 &lt;= ES_Person_Fit_Score__c &amp;&amp; ES_Person_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_3__c,
				&quot;D&quot;,
				&quot;&quot;
			)
		)
	)
)</formula>
        <label>Contact Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Person_Fit_Score__c</fullName>
        <label>Contact Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EverString_ID__c</fullName>
        <label>EverString ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormType__c</fullName>
        <label>FormType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insight_1__c</fullName>
        <label>Insight 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insight_2__c</fullName>
        <label>Insight 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insight_3__c</fullName>
        <label>Insight 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insights__c</fullName>
        <label>Insights</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lift_Multiple_Statement__c</fullName>
        <label>Lift Multiple Statement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <label>Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName  &amp; &apos; &apos;  &amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Phone__c</fullName>
        <label>Personal Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prospect_Status__c</fullName>
        <label>Prospect Status</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified - Used for conversion only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Links_Facebook__c</fullName>
        <label>Social Links - Facebook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Links_Linkedin__c</fullName>
        <label>Social Links - Linkedin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Links_Twitter__c</fullName>
        <label>Social Links - Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_Indicator1_Category__c</fullName>
        <label>Top Indicator1 Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Indicator1__c</fullName>
        <label>Top Indicator1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Indicator2_Category__c</fullName>
        <label>Top Indicator2 Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Indicator2__c</fullName>
        <label>Top Indicator2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Indicator3_Category__c</fullName>
        <label>Top Indicator3 Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Indicator3__c</fullName>
        <label>Top Indicator3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venture_Capital_Latest_Funding__c</fullName>
        <label>Venture Capital - Latest Funding</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venture_Capital_Latest_Inverstors__c</fullName>
        <label>Venture Capital - Latest Inverstors</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venture_Capital_Total_Funding__c</fullName>
        <label>Venture Capital - Total  Funding</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Behavior_Click_on_Free_Trial__c</fullName>
        <label>Web Behavior - Click on Free Trial</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Behavior_Click_on_Pricing_Page__c</fullName>
        <label>Web Behavior - Click on Pricing Page</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Traffic__c</fullName>
        <label>Web Traffic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>InternationalLeads</fullName>
        <filterScope>Queue</filterScope>
        <label>International Leads</label>
        <queue>InternationalLeads</queue>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>USLeads</fullName>
        <filterScope>Queue</filterScope>
        <label>US Leads</label>
        <queue>USLeads</queue>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
</CustomObject>